src/unit_tests/CustSemantics/success/ok-meth-attr.cl
class Main {
    main(): Int {1};
    a: Int;
    a(): String {"ok!"};
};