src/unit_tests/CustSemantics/fail/type-final-inherit-string.cl
class Main inherits IO {
    a : Complex;
	main() : Int {
		1
	};
};

class Complex inherits String {
    a : Int;
    b : Int;
};